--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -627,70 +627,63 @@
                 <div class="card mb-3">
                   <div class="card-header" role="tab" id="headingOne">
                     <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_19" aria-expanded="false" aria-controls="collapse1">
-                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>How to create more items in this list?</strong>
+                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>D50 (Definition)</strong>
                       </h6>
                       <span class="sign mbr-iconfont mbri-arrow-down"></span>
                     </a>
                   </div>
                   <div id="collapse1_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_19">
                     <div class="panel-body">
-                      <p class="mbr-fonts-style panel-text display-4">The number of items is limited in this block. Open
-                        the Block parameters to change the amount of items.</p>
+                      <p class="mbr-fonts-style panel-text display-4">Ratio between useful energy and total energy. The useful energy in this case ranges from 0 to 50 ms, while the total energy ranges from 0 to infinity. In the case of speech the D50 must be greater than 0.5. In the first 50ms there must be at least half of the total energy for speech to be intelligible.</p>
                     </div>
                   </div>
                 </div>
                 <div class="card mb-3">
                   <div class="card-header" role="tab" id="headingOne">
                     <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse2_19" aria-expanded="false" aria-controls="collapse2">
-                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>What is Mobirise Kit?
-                        </strong></h6>
+                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>C50/C80 (Clarity)</strong></h6>
                       <span class="sign mbr-iconfont mbri-arrow-down"></span>
                     </a>
                   </div>
                   <div id="collapse2_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_19">
                     <div class="panel-body">
                       <p class="mbr-fonts-style panel-text display-4">
-                        Mobirise Kit is a service that provides the access to all current and new
-                        themes/extensions developed by Mobirise. New themes/extensions are released every
-                        month and will be available in your account during your plan period, without any
-                        additional charge.</p>
+                        They are defined as the ratio of useful energy to harmful energy. Now the measures are logarithmic. They are used for the intelligibility of speech (C50) and music (C80). The C50 needs all articulations to be audible. For music the C80 is fine as the articulations are slower than speech. The level of intelligibility can be even lower than speech. Optimal values ​​for the C50 and C80.</p>
                     </div>
                   </div>
                 </div>
                 <div class="card mb-3">
                   <div class="card-header" role="tab" id="headingOne">
                     <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse3_19" aria-expanded="false" aria-controls="collapse3">
-                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Can I create sites for commerical
-                          projects?</strong></h6>
+                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Spatial Impression</strong></h6>
                       <span class="sign mbr-iconfont mbri-arrow-down"></span>
                     </a>
                   </div>
                   <div id="collapse3_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_19">
                     <div class="panel-body">
                       <p class="mbr-fonts-style panel-text display-4">
-                        Yes, Mobirise is free for both non-profit and commercial sites.</p>
+                        Is one of the most important characteristics evaluated. To have a correct sensation of spatiality, the ITDGs must not exceed 80 ms and must reach the listener from lateral directions, because this increases the perception of asymmetry of space. The intensity relationships between first reflections and direct sound must respect the laws of the precedence effect (Haas effect). From a frequency point of view, the most important frequency bands for the spatial impression are those with the octave band at 125 Hz (warm sound) and the part at 1000 Hz (opening band), which contributes to giving a spatial presence of the sound, higher presence front. While the 125 Hz band helps create an enveloping sound, the band around 1000 Hz is linked to the feeling of openness of the sound. The impression of spatiality is closely linked to interaural coherence. Low interaural coherence from a larger spatial environment. Asymmetric space = low interaural coherence. We like symmetry from a spatial point of view, but from an acoustic point of view we don't like it very much. The more different the signals that reach the two ears, the more we seem to be in an open space. There are several parameters for the coherence of the signal between two ears, including ITACC or inter aural cross correlation. All these parameters are generally recorded with Dummy-Heads.</p>
                     </div>
                   </div>
                 </div>
                 <div class="card mb-3">
                   <div class="card-header" role="tab" id="headingOne">
                     <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse4_19" aria-expanded="false" aria-controls="collapse4">
-                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>What is Code Editor?</strong></h6>
+                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Center Time (ts)</strong></h6>
                       <span class="sign mbr-iconfont mbri-arrow-down"></span>
                     </a>
                   </div>
                   <div id="collapse4_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_19">
                     <div class="panel-body">
                       <p class="mbr-fonts-style panel-text display-4">
-                        This extension allows editing the code of block in the app. Also, it's possible to
-                        add code to the head and body parts of pages.</p>
+                        This definition starts from the assumption that useful energy decays in the first 50/80 ms. But not in all situations this data is the same. Therefore another parameter is defined, namely the Center Time: barycentric time of the response to the impulse, i.e. it is the time that separates 50% of the energy before an instant and after an instant, therefore identifying half of an IR from the energetic point of view, therefore the time spent which, I have been in dress from 50% of the energy. Smaller ts -> more compact IR -> energy on first reflections. More right ts -> longer reverberation, energy spread on the diffuse part (tail). An environment that is too dry is not perceived as comfortable, so it is good that a certain environment has a certain spatiality, although it is good that the contribution is concentrated at the beginning.</p>
                     </div>
                   </div>
                 </div>
                 <div class="card mb-3">
                   <div class="card-header" role="tab" id="headingOne">
                     <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse5_19" aria-expanded="false" aria-controls="collapse5">
-                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>What is Mobirise Kit?
+                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Acoustic Reinforcement (G[dB])
                         </strong></h6>
                       <span class="sign mbr-iconfont mbri-arrow-down"></span>
                     </a>
@@ -698,10 +691,7 @@
                   <div id="collapse5_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_19">
                     <div class="panel-body">
                       <p class="mbr-fonts-style panel-text display-4">
-                        Mobirise Kit is a service that provides the access to all current and new
-                        themes/extensions developed by Mobirise. New themes/extensions are released every
-                        month and will be available in your account during your plan period, without any
-                        additional charge.</p>
+                        Mmeasure of the acoustic amplification introduced through an amplification apparatus compared with the response of the environment to a sound source without amplification acoustics (similar to the concept of transparent amplification, i.e. an attitude that depends on various factors). The acoustic reinforcement index gives indications on an acoustic apparatus that you do not want to interfere too much with the natural source. there is a standard that defines two possible measurement criteria for this acoustic reinforcement index: background noise and the energy that arrives from the amplified source in relation to the energy that arrives without amplification at 10 meters away. G >= -4dB for rooms intended for music; G >= +4dB for rooms intended for speech (intelligibility).</p>
                     </div>
                   </div>
                 </div>
