--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -634,7 +634,7 @@
           <div id="bootstrap-accordion_19" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
             <div class="card mb-3">
               <div class="card-header" role="tab" id="headingOne">
-                <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_19" aria-expanded="false" aria-controls="collapse1">
+                <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse7_19" aria-expanded="false" aria-controls="collapse7">
                   <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>D50 (Definition)</strong>
                   </h6>
                   <span class="sign mbr-iconfont mbri-arrow-down"></span>
@@ -649,7 +649,7 @@
             </div>
             <div class="card mb-3">
               <div class="card-header" role="tab" id="headingOne">
-                <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse2_19" aria-expanded="false" aria-controls="collapse2">
+                <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse8_19" aria-expanded="false" aria-controls="collapse8">
                   <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>C50/C80 (Clarity)</strong></h6>
                   <span class="sign mbr-iconfont mbri-arrow-down"></span>
                 </a>
@@ -664,7 +664,7 @@
             </div>
             <div class="card mb-3">
               <div class="card-header" role="tab" id="headingOne">
-                <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse3_19" aria-expanded="false" aria-controls="collapse3">
+                <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse9_19" aria-expanded="false" aria-controls="collapse9">
                   <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Spatial Impression</strong></h6>
                   <span class="sign mbr-iconfont mbri-arrow-down"></span>
                 </a>
@@ -684,7 +684,7 @@
             </div>
             <div class="card mb-3">
               <div class="card-header" role="tab" id="headingOne">
-                <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse4_19" aria-expanded="false" aria-controls="collapse4">
+                <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse10_19" aria-expanded="false" aria-controls="collapse10">
                   <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Center Time (ts)</strong></h6>
                   <span class="sign mbr-iconfont mbri-arrow-down"></span>
                 </a>
@@ -701,7 +701,7 @@
             </div>
             <div class="card mb-3">
               <div class="card-header" role="tab" id="headingOne">
-                <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse5_19" aria-expanded="false" aria-controls="collapse5">
+                <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse11_19" aria-expanded="false" aria-controls="collapse11">
                   <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Acoustic Reinforcement (G[dB])
                     </strong></h6>
                   <span class="sign mbr-iconfont mbri-arrow-down"></span>
@@ -719,7 +719,7 @@
             </div>
             <div class="card mb-3">
               <div class="card-header" role="tab" id="headingOne">
-                <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse6_19" aria-expanded="false" aria-controls="collapse6">
+                <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse12_19" aria-expanded="false" aria-controls="collapse12_19">
                   <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Can I create sites for commerical
                       projects?</strong></h6>
                   <span class="sign mbr-iconfont mbri-arrow-down"></span>
