--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -534,6 +534,9 @@
     <div class="container">
       <div class="row mt-8">
         <div class="col-12 col-md-6">
+          <h4 class="card-title mbr-fonts-style display-5">
+            <strong>Statistical Descriptors</strong>
+          </h4>
           <div id="bootstrap-accordion_19" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
             <div class="card mb-3">
               <div class="card-header" role="tab" id="headingOne">
@@ -631,6 +634,9 @@
           </div>
         </div>
         <div class="col-12 col-md-6">
+          <h4 class="card-title mbr-fonts-style display-5">
+            <strong>Statistical Descriptors Related to Energy</strong>
+          </h4>
           <div id="bootstrap-accordion_19" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
             <div class="card mb-3">
               <div class="card-header" role="tab" id="headingOne">
