--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -231,8 +231,7 @@
             <p class="mbr-text card-text mbr-fonts-style display-7">
             <ul>
               <li>Multichannel Recording Solutions</li>
-              <li>Analysis</li>
-              <li>Evaluation</li>
+              <li>Evaluation of the Statistical Descriptors</li>
             </ul>
             </p>
           </div>
@@ -658,7 +657,7 @@
                 <div class="panel-body">
                   <p class="mbr-fonts-style panel-text display-4">
                     They are defined as the ratio of useful energy to harmful energy. Now the measures are logarithmic. They are used for the intelligibility of speech (C50) and music (C80). The C50 needs all articulations to be audible. For music
-                    the C80 is fine as the articulations are slower than speech. The level of intelligibility can be even lower than speech. Optimal values ​​for the C50 and C80.</p>
+                    the C80 is fine as the articulations are slower than speech. The level of intelligibility can be even lower than speech. <a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html"><b>Optimal values ​​for the C50 and C80</b></a>.</p>
                 </div>
               </div>
             </div>
