--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -524,7 +524,7 @@
   </section>
 
   <!-- Accordion-->
-  <section data-bs-version="5.1" class="content16 cid-tX8Gfky3Og" id="content16-n">
+  <section data-bs-version="5.1" class="content16 cid-tX8Gfky3Og" id="content16-n" style:"background-color: #fde5b1">
     <div class="container">
       <div class="row mt-8">
         <div class="col-12 col-md-6">
