--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -527,8 +527,8 @@
   <section data-bs-version="5.1" class="content16 cid-tX8Gfky3Og" id="content16-n" style:"background-color: #fde5b1">
     <div class="container">
       <div class="row mt-8">
-        <div class="col-12 col-md-6">
-          <h4 class="card-title mbr-fonts-style display-5">
+        <div class="col-12 col-md-6" style:"background-color: #ffffff">
+          <h4 class="card-title mbr-fonts-style display-5" style:"text-align: center">
             <strong>Statistical Descriptors</strong>
           </h4>
           <div id="bootstrap-accordion_19" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
@@ -627,8 +627,8 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-6">
-          <h4 class="card-title mbr-fonts-style display-5">
+        <div class="col-12 col-md-6"  style:"background-color: #ffffff">
+          <h4 class="card-title mbr-fonts-style display-5"  style:"text-align: center">
             <strong>Statistical Descriptors Related to Energy</strong>
           </h4>
           <div id="bootstrap-accordion_19" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
