--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -355,7 +355,7 @@
   <!-- List-->
   <section data-bs-version="5.1" class="features1 cid-tX6D4uUNCX1" id="features2-i">
     <div class="container">
-      <div class="title col-md-12 col-lg-10">
+      <div class="title col-md-12 col-lg-10"  style:"text-align: center">
         <span>
           <h4 style="color: #ffffff" class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Acoustic Analysis Methodology</strong></h4>
         </span>
