--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -524,7 +524,7 @@
   </section>
 
   <!-- Accordion-->
-  <section data-bs-version="5.1" class="content16 cid-tX8Gfky3Og" id="content16-n" style:"background-color: #fde5b1">
+  <section data-bs-version="5.1" class="content16 cid-tX8Gfky3Og" id="content16-n" style="background-color: #fde5b1">
     <div class="container">
       <div class="title col-md-12 col-lg-10"  style:"text-align: center">
         <span>
@@ -729,36 +729,15 @@
     </div>
   </section>
 
-
-
-  <!-- Text-->
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="setup_ve">
-    <div class="container">
+  <!-- Image-->
+  <section data-bs-version="5.1" class="info1 cid-tX6pWBCRXL2 mbr-fullscreen" id="info1-g">
+    <div class="align-center container">
       <div class="row justify-content-center">
-        <div class="col-md-12 col-lg-8">
-          <h5>Setup of Virtual environment</h5>
-          <br>
-          <p class="mbr-text mbr-fonts-style display-7">
-
-          </p>
+        <div class="col-12 col-lg-8">
         </div>
       </div>
     </div>
   </section>
-
-  <!-- Text-->
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="setup_ve">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-md-12 col-lg-8">
-          <h5>Analysis of the Target Sound Captures inside the Virtual environment</h5>
-          <br>
-          <p class="mbr-text mbr-fonts-style display-7">
-
-          </p>
-        </div>
-      </div>
-    </div>
 
     <!-- Text-->
     <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="setup_ve">
