--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -532,7 +532,7 @@
         </span>
       </div>
       <div class="row mt-8">
-        <div class="col-12 col-md-6" style:"background-color: #ffffff">
+        <div class="col-12 col-md-6" style="background-color: #ffffff">
           <h4 class="card-title mbr-fonts-style display-5" style:"text-align: center">
             <strong>Statistical Descriptors</strong>
           </h4>
@@ -632,7 +632,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-6"  style:"background-color: #ffffff">
+        <div class="col-12 col-md-6"  style="background-color: #ffffff">
           <h4 class="card-title mbr-fonts-style display-5"  style:"text-align: center">
             <strong>Statistical Descriptors Related to Energy</strong>
           </h4>
