--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/parallax/jarallax.css">
-  <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/">
+  <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/dropdown/css/style.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/socicon/css/styles.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/theme/css/style.css">
