--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -528,7 +528,7 @@
     <div class="container">
       <div class="title col-md-12 col-lg-10"  style:"text-align: center">
         <span>
-          <h4 style="color: #ffffff" class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Evaluation of the Statistical Descriptors</strong></h4>
+          <h4 style="color: #0e1c2b" class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Evaluation of the Statistical Descriptors</strong></h4>
         </span>
       </div>
       <div class="row mt-8">
