--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -355,7 +355,7 @@
   <!-- List-->
   <section data-bs-version="5.1" class="features1 cid-tX6D4uUNCX1" id="features2-i">
     <div class="container">
-      <div class="title col-md-12 col-lg-10"  style:"text-align: center">
+      <div class="title col-md-12 col-lg-10"  style="text-align: center">
         <span>
           <h4 style="color: #ffffff" class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Acoustic Analysis Methodology</strong></h4>
         </span>
@@ -526,7 +526,7 @@
   <!-- Accordion-->
   <section data-bs-version="5.1" class="content16 cid-tX8Gfky3Og" id="content16-n" style="background-color: #fde5b1">
     <div class="container">
-      <div class="title col-md-12 col-lg-10"  style:"text-align: center">
+      <div class="title col-md-12 col-lg-10"  style="text-align: center">
         <span>
           <h4 style="color: #0e1c2b" class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Evaluation of the Statistical Descriptors</strong></h4>
         </span>
@@ -633,7 +633,7 @@
           </div>
         </div>
         <div class="col-12 col-md-6"  style="background-color: #ffffff">
-          <h4 class="card-title mbr-fonts-style display-5"  style:"text-align: center">
+          <h4 class="card-title mbr-fonts-style display-5"  style="text-align: center">
             <strong>Statistical Descriptors Related to Energy</strong>
           </h4>
           <div id="bootstrap-accordion_19" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
