--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -533,7 +533,7 @@
       </div>
       <div class="row mt-8">
         <div class="col-12 col-md-6" style="background-color: #ffffff">
-          <h4 class="card-title mbr-fonts-style display-5" style:"text-align: center">
+          <h4 class="card-title mbr-fonts-style display-5" style="text-align: center">
             <strong>Statistical Descriptors</strong>
           </h4>
           <div id="bootstrap-accordion_19" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
