--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -355,9 +355,9 @@
   <!-- List-->
   <section data-bs-version="5.1" class="features1 cid-tX6D4uUNCX1" id="features2-i">
     <div class="container">
-      <div class="title col-md-12 col-lg-10"  style="text-align: center">
+      <div class="title col-md-12 col-lg-10">
         <span>
-          <h4 style="color: #ffffff" class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Acoustic Analysis Methodology</strong></h4>
+          <h4 style="color: #ffffff; text-align: center" class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Acoustic Analysis Methodology</strong></h4>
         </span>
       </div>
       <div class="row justify-content-center">
@@ -526,9 +526,9 @@
   <!-- Accordion-->
   <section data-bs-version="5.1" class="content16 cid-tX8Gfky3Og" id="content16-n" style="background-color: #fde5b1">
     <div class="container">
-      <div class="title col-md-12 col-lg-10"  style="text-align: center">
+      <div class="title col-md-12 col-lg-10">
         <span>
-          <h4 style="color: #0e1c2b" class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Evaluation of the Statistical Descriptors</strong></h4>
+          <h4 style="color: #0e1c2b; text-align: center" class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Evaluation of the Statistical Descriptors</strong></h4>
         </span>
       </div>
       <div class="row mt-8">
