--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -739,6 +739,17 @@
     </div>
   </section>
 
+  <!-- Video-->
+  <section data-bs-version="5.1" class="info1 cid-tX6pWBCRXL1 mbr-fullscreen" id="info1-g">
+    <div class="align-center container">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-8">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/M3iemBpZz0w?si=nsm56RUQEJ_ijuuf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+  </section>
+
     <!-- Text-->
     <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="setup_ve">
       <div class="container">
