--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -526,10 +526,12 @@
   <!-- Accordion-->
   <section data-bs-version="5.1" class="content16 cid-tX8Gfky3Og" id="content16-n" style="background-color: #fde5b1">
     <div class="container">
-      <div class="title col-md-12 col-lg-10">
-        <span>
-          <h4 style="color: #0e1c2b; text-align: center" class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Evaluation of the Statistical Descriptors</strong></h4>
-        </span>
+      <div class="row justify-content-center">
+        <div class="title col-md-12 col-lg-10">
+          <span>
+            <h4 style="color: #0e1c2b; text-align: center" class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Evaluation of the Statistical Descriptors</strong></h4>
+          </span>
+        </div>
       </div>
       <div class="row mt-8">
         <div class="col-12 col-md-6" style="background-color: #ffffff">
