--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -749,7 +749,7 @@
       <div class="row justify-content-center">
         <div class="title col-md-12 col-lg-10">
           <span>
-            <h4 style="color: #0e1c2b; text-align: center" class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Syntesis of Digital Sounds</strong></h4>
+            <h4 style="color: #0e1c2b; text-align: center" class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Synthesis of Digital Sounds</strong></h4>
           </span>
         </div>
         <div class="col-12 col-lg-8">
