--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -538,7 +538,7 @@
       <div class="row mt-8">
         <div class="col-12 col-md-6" style="background-color: #ffffff">
           <h4 class="card-title mbr-fonts-style display-5" style="text-align: center">
-            <strong>Statistical Descriptors</strong>
+            <strong><br><br>Statistical Descriptors</strong>
           </h4>
           <div id="bootstrap-accordion_19" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
             <div class="card mb-3">
