--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/parallax/jarallax.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
+  <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/dropdown/css/style.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/socicon/css/styles.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/theme/css/style.css">
@@ -546,7 +547,7 @@
                 <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_19" aria-expanded="false" aria-controls="collapse1">
                   <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>RT60 (Reverberation Time)</strong>
                   </h6>
-                  <span class="sign mbr-iconfont mbri-arrow-down"></span>
+                  <span class="sign mbr-iconfont mobi-mbri-arrow-down"></span>
                 </a>
               </div>
               <div id="collapse1_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_19">
@@ -560,7 +561,7 @@
                 <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse2_19" aria-expanded="false" aria-controls="collapse2">
                   <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>EDT (Early Decay Time)
                     </strong></h6>
-                  <span class="sign mbr-iconfont mbri-arrow-down"></span>
+                  <span class="sign mbr-iconfont2 mobi-mbri-arrow-down"></span>
                 </a>
               </div>
               <div id="collapse2_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_19">
