--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -357,12 +357,12 @@
   <section data-bs-version="5.1" class="features1 cid-tX6D4uUNCX1" id="features2-i">
     <div class="container">
       <div class="row justify-content-center">
-      <div class="title col-md-12 col-lg-10">
-        <span>
-          <h4 style="color: #ffffff; text-align: center" class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Acoustic Analysis Methodology</strong></h4>
-        </span>
+        <div class="title col-md-12 col-lg-10">
+          <span>
+            <h4 style="color: #ffffff; text-align: center" class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Acoustic Analysis Methodology</strong></h4>
+          </span>
+        </div>
       </div>
-    </div>
       <div class="row justify-content-center">
         <div class="col-12 col-md-6 col-lg-3">
           <div class="card-wrapper">
@@ -547,7 +547,7 @@
                 <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_19" aria-expanded="false" aria-controls="collapse1">
                   <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>RT60 (Reverberation Time)</strong>
                   </h6>
-                  <span class="sign mbr-iconfont mobi-mbri-arrow-down"></span>
+                  <span class="sign mbr-iconfont2 mobi-mbri-arrow-down"></span>
                 </a>
               </div>
               <div id="collapse1_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_19">
@@ -575,7 +575,7 @@
               <div class="card-header" role="tab" id="headingOne">
                 <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse3_19" aria-expanded="false" aria-controls="collapse3">
                   <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>ITDG (Initial Time Delay Gap)</strong></h6>
-                  <span class="sign mbr-iconfont mbri-arrow-down"></span>
+                  <span class="sign mbr-iconfont2 mobi-mbri-arrow-down"></span>
                 </a>
               </div>
               <div id="collapse3_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_19">
@@ -590,7 +590,7 @@
               <div class="card-header" role="tab" id="headingOne">
                 <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse4_19" aria-expanded="false" aria-controls="collapse4">
                   <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Haas effect</strong></h6>
-                  <span class="sign mbr-iconfont mbri-arrow-down"></span>
+                  <span class="sign mbr-iconfont2 mobi-mbri-arrow-down"></span>
                 </a>
               </div>
               <div id="collapse4_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_19">
@@ -608,7 +608,7 @@
                 <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse5_19" aria-expanded="false" aria-controls="collapse5">
                   <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>BR (Bass Ratio)
                     </strong></h6>
-                  <span class="sign mbr-iconfont mbri-arrow-down"></span>
+                  <span class="sign mbr-iconfont2 mobi-mbri-arrow-down"></span>
                 </a>
               </div>
               <div id="collapse5_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_19">
@@ -623,7 +623,7 @@
               <div class="card-header" role="tab" id="headingOne">
                 <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse6_19" aria-expanded="false" aria-controls="collapse6">
                   <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Brilliance</strong></h6>
-                  <span class="sign mbr-iconfont mbri-arrow-down"></span>
+                  <span class="sign mbr-iconfont2 mobi-mbri-arrow-down"></span>
                 </a>
               </div>
               <div id="collapse6_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_19">
@@ -647,7 +647,7 @@
                 <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse7_19" aria-expanded="false" aria-controls="collapse7">
                   <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>D50 (Definition)</strong>
                   </h6>
-                  <span class="sign mbr-iconfont mbri-arrow-down"></span>
+                  <span class="sign mbr-iconfont2 mobi-mbri-arrow-down"></span>
                 </a>
               </div>
               <div id="collapse7_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_19">
@@ -661,7 +661,7 @@
               <div class="card-header" role="tab" id="headingOne">
                 <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse8_19" aria-expanded="false" aria-controls="collapse8">
                   <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>C50/C80 (Clarity)</strong></h6>
-                  <span class="sign mbr-iconfont mbri-arrow-down"></span>
+                  <span class="sign mbr-iconfont2 mobi-mbri-arrow-down"></span>
                 </a>
               </div>
               <div id="collapse8_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_19">
@@ -677,7 +677,7 @@
               <div class="card-header" role="tab" id="headingOne">
                 <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse9_19" aria-expanded="false" aria-controls="collapse9">
                   <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Spatial Impression</strong></h6>
-                  <span class="sign mbr-iconfont mbri-arrow-down"></span>
+                  <span class="sign mbr-iconfont2 mobi-mbri-arrow-down"></span>
                 </a>
               </div>
               <div id="collapse9_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_19">
@@ -697,7 +697,7 @@
               <div class="card-header" role="tab" id="headingOne">
                 <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse10_19" aria-expanded="false" aria-controls="collapse10">
                   <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Center Time (ts)</strong></h6>
-                  <span class="sign mbr-iconfont mbri-arrow-down"></span>
+                  <span class="sign mbr-iconfont2 mobi-mbri-arrow-down"></span>
                 </a>
               </div>
               <div id="collapse10_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_19">
@@ -715,7 +715,7 @@
                 <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse11_19" aria-expanded="false" aria-controls="collapse11">
                   <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Acoustic Reinforcement (G[dB])
                     </strong></h6>
-                  <span class="sign mbr-iconfont mbri-arrow-down"></span>
+                  <span class="sign mbr-iconfont2 mobi-mbri-arrow-down"></span>
                 </a>
               </div>
               <div id="collapse11_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_19">
