--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -771,19 +771,16 @@
     </div>
   </section>
 
-  <!-- Text-->
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="setup_ve">
-    <div class="container">
+  <!-- Image-->
+  <section data-bs-version="5.1" class="info1 cid-tX6pWBCRXL6 mbr-fullscreen" id="info1-g">
+    <div class="align-center container">
       <div class="row justify-content-center">
-        <div class="col-md-12 col-lg-8">
-          <h5>Global Tuning</h5>
-          <br>
-          <p class="mbr-text mbr-fonts-style display-7">
-
-          </p>
+        <div class="col-12 col-lg-8">
         </div>
       </div>
     </div>
+  </section>
+
 
     <!-- Text-->
     <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="stage3">
