--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -781,21 +781,18 @@
     </div>
   </section>
 
-
-    <!-- Text-->
-    <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="stage3">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-md-12 col-lg-8">
-            <h3>Stage 3: In-situ Installation</h3>
-            <br>
-            <p class="mbr-text mbr-fonts-style display-7">
-
-            </p>
-          </div>
+  <!-- Title-->
+  <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="soundscape_design_dev">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="title col-md-12 col-lg-10"><span>
+            <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>03. In-situ Installation</strong></h4>
+          </span>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
+
 
     <!-- Text-->
     <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="setup_ve">
