--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -709,6 +709,17 @@
     </div>
   </section>
 
+  <!-- Image-->
+  <section data-bs-version="5.1" class="info1 cid-tX6pWBCRXL7 mbr-fullscreen" id="info1-g">
+    <div class="align-center container">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-8">
+        </div>
+      </div>
+    </div>
+  </section>
+
+
 
     <!-- Appendix-->
 
