--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -720,6 +720,17 @@
   </section>
 
 
+  <!-- Title-->
+  <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="soundscape_design_dev">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="title">
+          <span class="num mbr-fonts-style display-1"><strong><br><br><br><br><br><br><br><br><br><br><br>Thank You!</strong></span>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
     <!-- Appendix-->
 
