--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -725,7 +725,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="title">
-          <span class="num mbr-fonts-style display-1"><strong><br><br><br><br><br><br><br><br><br><br><br>Thank You!</strong></span>
+          <span class="num mbr-fonts-style display-1"><strong><br><br><br><br><br><br><br><br><br><br><br>Thank You!<br><br><br><br><br><br><br><br></strong></span>
         </div>
       </div>
     </div>
