--- a/pages/learn/go_for_maxmsp.html
+++ b/pages/learn/go_for_maxmsp.html
@@ -77,7 +77,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
-                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">BELLA PE TE<h3>
+                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">BELLA PE TE <3<h3>
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong></strong></h4>
             </div>
         </div>
