--- a/pages/learn/go_for_maxmsp.html
+++ b/pages/learn/go_for_maxmsp.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Luc Ferrari</title>
+  <title>GO for MaxMSP</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
