--- a/nonloso/a.html
+++ b/nonloso/a.html
@@ -1,1 +1,14 @@
-hsjsj
+<!DOCTYPE html>
+<html>
+    <p><i>Ho bisogno di uno spazio in cui parlarti per quando potrai ascoltarmi.
+        </i>
+        <br><br>
+     </p>
+
+    <script>
+      includeHTML();
+    </script>
+
+</body>
+
+</html>
