--- a/nonloso/a.html
+++ b/nonloso/a.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html>
+   <head>
+
+
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+  <link rel="shortcut icon" href="https://www.gabrielavelitch.com/assets/images/favicon-96x96.png" type="image/x-icon">
+  <meta name="description" content="">
+
+    
     <p><i>Ho bisogno di uno spazio in cui parlarti per quando potrai ascoltarmi.
         </i>
         <br><br>
