--- a/nonloso/a.html
+++ b/nonloso/a.html
@@ -49,6 +49,14 @@
     <p><i>Ho bisogno di uno spazio in cui parlarti per quando potrai ascoltarmi.
         </i>
         <br><br>
+          <p>Non sei il mio tutor ma una nuova visione, 
+            sarò sempre comunque io a filtrarla e farla mia.
+            Mi sento in espansione e perdo il controllo; 
+            lo lascio libero di esplorare per accogliere la freschezza,
+            ma sempre ci riesco e lo metto in bottiglia.
+            Rischia di esplodere.
+            Poi dovrei mangiarmi i vetri.
+            Grazie per aver aiutato a darmi capire come salvarmi la bocca.
      </p>
 
       <section
