--- a/nonloso/a.html
+++ b/nonloso/a.html
@@ -53,7 +53,7 @@
             sarò sempre comunque io a filtrarla e farla mia.
             Mi sento in espansione e perdo il controllo; 
             lo lascio libero di esplorare per accogliere la freschezza,
-            ma sempre ci riesco e lo metto in bottiglia.
+            ma non sempre ci riesco e finisce in bottiglia.
             Rischia di esplodere.
             Poi dovrei mangiarmi i vetri.
             Grazie per aver aiutato a darmi capire come salvarmi la bocca.
