--- a/nonloso/a.html
+++ b/nonloso/a.html
@@ -56,7 +56,7 @@
             ma non sempre ci riesco e finisce in bottiglia.
             Rischia di esplodere.
             Poi dovrei mangiarmi i vetri.
-            Grazie per aver aiutato a darmi capire come salvarmi la bocca.
+            Grazie per avermi aiutato a capire come salvarmi la bocca.
      </p>
 
       <section
