--- a/nonloso/a.html
+++ b/nonloso/a.html
@@ -58,7 +58,11 @@
             Poi dovrei mangiarmi i vetri.
             Grazie per avermi aiutato a capire come salvarmi la bocca.
      </p>
-
+    <br><br>
+    <br><br>
+    <p><i>Fluido, in continua espansione</i><p>
+      
+      
       <section
     style="display: none !important;background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a
       href="https://mobirise.site/z" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a>
