--- a/nonloso/a.html
+++ b/nonloso/a.html
@@ -46,7 +46,7 @@
 
 <body>
 
-    <p><i>Ho bisogno di uno spazio in cui parlarti per quando è il momento di ascoltarmi.
+    <p><i>Ho bisogno di uno spazio in cui parlarti per quando sarà il momento di ascoltarmi.
         </i>
         <br><br>
           <p>Non sei il mio tutor ma una nuova visione, 
