--- a/nonloso/a.html
+++ b/nonloso/a.html
@@ -60,7 +60,7 @@
      </p>
     <br><br>
     <br><br>
-    <p><i>Fluido, in continua espansione</i><p>
+    <p><i>Fluido, in continua espansione</i></p>
       
       
       <section
