--- a/nonloso/a.html
+++ b/nonloso/a.html
@@ -46,8 +46,12 @@
 
 <body>
 
-    <p><i>Ho bisogno di uno spazio in cui parlarti per quando sarà il momento di non ascoltarmi.
+    <p STYLE="text-decoration:overline"><i>Ho bisogno di uno spazio in cui parlarti per quando sarà il momento di non ascoltarmi.
+        </i></p>
+        
+<p><i>Ho bisogno di uno spazio dove scriverti quando non ti parlo.
         </i>
+        
         <br><br>
           <p>Non sei il mio tutor ma una nuova visione, 
             sarò sempre comunque io a filtrarla e farla mia.
