--- a/nonloso/a.html
+++ b/nonloso/a.html
@@ -49,7 +49,7 @@
     <p STYLE="text-decoration:overline"><i>Ho bisogno di uno spazio in cui parlarti per quando sarà il momento di non ascoltarmi.
         </i></p>
         
-<p><i>Ho bisogno di uno spazio dove scriverti quando non devo essere veloce.
+<p><i>Ho bisogno di uno spazio dove parlarti quando non devo essere veloce.
         </i>
         
         <br><br>
