--- a/nonloso/a.html
+++ b/nonloso/a.html
@@ -46,8 +46,8 @@
 
 <body>
 
-    <p STYLE="text-decoration:overline"><i>Ho bisogno di uno spazio in cui parlarti per quando sarà il momento di non ascoltarmi.
-        </i></p>
+    <p><s><i>Ho bisogno di uno spazio in cui parlarti per quando sarà il momento di non ascoltarmi.
+        </s></i></p>
         
 <p><i>Ho bisogno di uno spazio dove parlarti quando non devo essere veloce.
         </i>
