--- a/nonloso/a.html
+++ b/nonloso/a.html
@@ -62,6 +62,14 @@
             Poi dovrei mangiarmi i vetri.
             Grazie per avermi aiutato a capire come salvarmi la bocca.
      </p>
+    
+    <p>
+      Lo so,davvero io lo so che non sono il tuo tutor.
+Però a volte quei vetri li dobbiamo mangiare,altrimenti di tutta 'quella' sofferenza che abbiamo già accolto che ce ne facciamo.
+Dove sta l'insegnamento?
+Alla fine li ingoi,li senti percorrere la gola e accomodarsi nello stomaco...è qui che finisce il dolore.
+Pensa a cosa hai imparato.
+</p>
     <br><br>
     <br><br>
     <p><i>Fluido, in continua espansione</i></p>
