--- a/nonloso/a.html
+++ b/nonloso/a.html
@@ -63,7 +63,7 @@
             Grazie per avermi aiutato a capire come salvarmi la bocca.
      </p>
     
-    <p>
+    <p style="color:red;">
       Lo so,davvero io lo so che non sono il tuo tutor.
 Però a volte quei vetri li dobbiamo mangiare,altrimenti di tutta 'quella' sofferenza che abbiamo già accolto che ce ne facciamo.
 Dove sta l'insegnamento?
